Changelog
=========

12.3-dev0 - (unreleased)
---------------------------

12.2 - (2019-09-10)
--------------------------
* Cleanup: Get rid of getDataOwner possible relation to solve install problem
  for ENI SEIS.
  [GhitaB #108504]

12.1 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

12.0 - (2018-09-07)
-------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
  [avoinea refs #98283]
* Cleanup: Remove eea.exhibit dependency
  [avoinea refs #98283]

11.6 - (2018-06-20)
--------------------------
* Change: updated URLs pointing to eea.europa.eu with https://
  [alecghica refs #95849]

11.5 - (2018-05-30)
--------------------------
* Bug fix: Restrict getBRefs only to related items
  [avoinea refs #95796]

11.4 - (2018-04-11)
-------------------
* Bug fix: retrive url of Assessment Daviz relation from portal_redirection
  in case the given relation was renamed and the uid no longer points to
  the correct object
  [ichim-david refs #94042]
* Feature: added @@fix_broken_daviz_relations which when called on the
  Assessment content type will attempt to fix relations that have been
  renamed
  [ichim-david refs #94042]
* Change: clear floats for daviz-settings
  [ichim-david refs #91590]

11.3 - (2018-03-14)
-------------------
* Change: call js code within jQuery dom ready allowing for deferred js loading
  [ichim-david refs #91577]

11.2 - (2017-12-12)
-------------------
* Change: Replace eeacms/zptlint with eeacms/plone-test:4 zptlint
  [avoinea refs #90415]

11.1 - (2017-11-07)
-------------------
* Change: Remove Sphinx generated documentation
  [petchesi-iulian refs #88212]

11.0 - (2017-05-22)
-------------------
* Change: fixed PyLint warnings and errors
  [valipod refs #84949]

10.9 - (2017-05-15)
-------------------
* Change: fixed PyLint warnings and errors
  [eduard-fironda refs #84949]

10.8 - (2017-05-02)
-------------------